modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ahmad Hamad - Professional Full Stack Developer Portfolio showcasing web and software development projects">
-    <meta name="keywords" content="developer, portfolio, full stack, web development, software engineer, react, node.js, javascript, frontend, backend">
     <meta name="author" content="Ahmad Hamad">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Ahmad Hamad | Full Stack Developer">
-    <meta property="og:description" content="Professional portfolio showcasing full stack development projects and skills">
+    <meta property="og:title" content="Ahmad Hamad">
     <meta property="og:image" content="assets/images/profile1.jpg">
     <meta property="og:url" content="https://Ahmadhamad.com">
     <meta property="og:type" content="website">
