modified:   index.html

--- a/index.html
+++ b/index.html
@@ -140,10 +140,20 @@
                     </div>
                     <div class="skills-list">
                       <span>Burp Suite</span>
-                      <span>Nmap</span>
+                      <span>Nmap-Tools</span>
+                      <span>Threat Hunter</span>
+                      <span>Penetration Tester</span>
+                      <span>Vulnerability Analyst</span>
+                      <span>Maltego-Tools</span>
+                      <span>BeEF-Tools</span>
+                      <span>Aircrack-ng-Tools</span>
+                      <span>Hydra-Tools</span>
+                      <span>Hashcat-Tools</span>
+                      <span>PowerSploit-Tools</span>
+                      <span>LOIC-Tools</span>
                       <span>Metasploit</span>
                       <span>Kali Linux</span>
-                      <span>OSINT</span>
+                      <span>OSINT-Tools</span>
                       <span>Social Engineering</span>
                       <span>Reverse Engineering</span>
                       
