modified:   index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
                   <p>I'm <span class="typedText"></span></p>
               </div>
               <div class="featured-text-info">
-                  <p>Experienced cybersecurity professional dedicated to protecting digital assets, preventing threats, and ensuring the confidentiality, integrity, and availability of systems. Skilled in risk assessment, vulnerability management, and implementing robust security protocols to safeguard organizations against evolving cyber threats.</p>
+                  <p>I’m Ahmed Hamad, a Cybersecurity Specialist with over 3 years of experience in the field. I have advanced skills in vulnerability analysis, penetration testing, and securing systems and networks against cyberattacks.
+
+I utilize specialized tools like Kali Linux, Metasploit, Burp Suite, and Nmap to uncover security vulnerabilities and assess security levels. I also have a strong background in both Linux and Windows systems and continuously work on enhancing my skills in reverse engineering, social engineering attacks, and exploring how to use artificial intelligence in cybersecurity.
+
+Additionally, I help with solving cyber threat issues and resolving social media security problems. I share educational and awareness content about cybersecurity on Instagram, aiming to spread security culture in the Arab world.</p>
               </div>
               <div class="featured-text-btn">
                 <a href="#contact" class="btn blue-btn">Contact me <i class="uil uil-message"></i></a>
@@ -119,7 +123,11 @@
             <div class="col">
                 <div class="about-info">
                     <h3>My introduction</h3>
-                    <p>I am a cybersecurity enthusiast with a strong foundation in securing systems, networks, and data. I focus on identifying vulnerabilities, preventing threats, and implementing effective security measures. My approach combines technical knowledge with problem-solving to ensure robust protection in dynamic environments.</p>
+                    <p>Ahmed Hamad is a Cybersecurity Specialist with over 3 years of experience in the field. He has advanced skills in vulnerability analysis, penetration testing, and securing systems and networks against cyberattacks.
+
+Ahmed utilizes specialized tools such as Kali Linux, Metasploit, Burp Suite, and Nmap, among others, to uncover vulnerabilities and analyze security. He has a strong background in Linux and Windows systems, and is continuously focused on enhancing his expertise, particularly in reverse engineering, social engineering attacks, and leveraging artificial intelligence in security.
+
+In addition, Ahmed helps with cyber threat issues and resolving social media security problems. He is also known for publishing awareness and educational content on cybersecurity through Instagram, aiming to spread security culture across the Arab world.</p>
                     <div class="about-stats">
                         <div class="stat-item">
                             <span class="stat-number">3+</span>
@@ -194,7 +202,7 @@
        <section class="section" id="contact">
         <div class="top-header">
             <h1>&lt;Contact /&gt;</h1>
-            <span>// Do you have a project in mind? Let's connect!</span>
+            <span> * Do You Have A Request Or A Problem? Contact me!</span>
         </div>
         <div class="code-terminal">
             <div class="terminal-header">
