--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@ In addition, Ahmed helps with cyber threat issues and resolving social media sec
                         <form id="contact-form">
                             <div class="form-control">
                                 <div class="form-inputs">
-                                    <input type="text" class="input-field" name="user_name" placeholder="// Your Name" required>
-                                    <input type="email" class="input-field" name="user_email" placeholder="// Your Email" required>
+                                    <input type="text" class="input-field" name="user_name" placeholder="Your Name" required>
+                                    <input type="email" class="input-field" name="user_email" placeholder="Your Email" required>
                                 </div>
                                 <div class="text-area">
-                                    <textarea name="message" placeholder="/* Your Message */" required></textarea>
+                                    <textarea name="message" placeholder="Your Message ..." required></textarea>
                                 </div>
                                 <div class="form-button">
                                     <button type="submit" class="btn code-btn">
