modified:   index.html 	modified:   robots.txt 	modified:   sitemap.xml

--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ahmad Hamad">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Ahmad Hamad">
-    <meta property="og:image" content="assets/images/profile1.jpg">
-    <meta property="og:url" content="https://Ahmadhamad.com">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="theme-color" content="#6e57e0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Ahmad Hamad" />
+  <meta name="description" content="Ahmed Hamad is a cybersecurity specialist with expertise in penetration testing, vulnerability assessment, and protecting digital systems from cyber threats." />
+  <meta name="keywords" content="Ahmed Hamad, Ahmad Hamad, Cybersecurity Specialist, Ethical Hacker, Penetration Testing, Vulnerability Assessment, Threat Intelligence, Cybersecurity Palestine" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph Meta Tags for Facebook -->
+  <meta property="og:title" content="Ahmad Hamad - Cybersecurity Specialist" />
+  <meta property="og:description" content="Cybersecurity expert focused on ethical hacking, threat prevention, and digital protection services." />
+  <meta property="og:image" content="https://ahmadhamad970.github.io/profile-website_Ahmad/assets/images/profile1.jpg" />
+  <meta property="og:url" content="https://ahmadhamad970.github.io/profile-website_Ahmad/" />
+  <meta property="og:type" content="website" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/png">
-    
-    <title>Ahmad Hamad</title>
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ahmad Hamad - Cybersecurity Expert & Ethical Hacker" />
+  <meta name="twitter:description" content="Passionate about cybersecurity, Ahmad specializes in penetration testing, vulnerability analysis, and cyber threat defense." />
+  <meta name="twitter:image" content="https://ahmadhamad970.github.io/profile-website_Ahmad/assets/images/profile1.jpg" />
+
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ahmad Hamad",
+    "jobTitle": "Cybersecurity Specialist",
+    "url": "https://ahmadhamad970.github.io/profile-website_Ahmad",
+    "image": "https://ahmadhamad970.github.io/profile-website_Ahmad/assets/images/profile1.jpg",
+    "sameAs": [
+      "https://www.instagram.com/ahmad.hamad.970",
+      "https://www.linkedin.com/in/ahmad-hamad-963944337",
+      "https://github.com/ahmadhamad970"
+    ],
+    "description": "Experienced cybersecurity professional specialized in ethical hacking, vulnerability analysis, and cyber defense."
+  }
+  </script>
+
+ 
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/png" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
+
+  <title>Ahmad Hamad | Cybersecurity Specialist & Ethical Hacker</title>
 </head>
+
 <body>
    <div id="preloader">
       <div class="loader">
@@ -164,7 +191,7 @@ In addition, Ahmed helps with cyber threat issues and resolving social media sec
                       <span>OSINT-Tools</span>
                       <span>Social Engineering</span>
                       <span>Reverse Engineering</span>
-                      
+
                     </div>
                 </div>
             </div>
