modified:   assets/css/style.css 	new file:   assets/js/background.js 	new file:   assets/js/particles-config.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <meta name="description" content="Ahmed Hamad is a cybersecurity specialist with expertise in penetration testing, vulnerability assessment, and protecting digital systems from cyber threats." />
   <meta name="keywords" content="Ahmed Hamad, Ahmad Hamad, Cybersecurity Specialist, Ethical Hacker, Penetration Testing, Vulnerability Assessment, Threat Intelligence, Cybersecurity Palestine" />
   <meta name="robots" content="index, follow" />
-  
-  <!-- Open Graph Meta Tags for Facebook -->
+
+
   <meta property="og:title" content="Ahmad Hamad - Cybersecurity Specialist" />
   <meta property="og:description" content="Cybersecurity expert focused on ethical hacking, threat prevention, and digital protection services." />
   <meta property="og:image" content="https://ahmadhamad970.github.io/profile-website_Ahmad/assets/images/profile1.jpg" />
   <meta property="og:url" content="https://ahmadhamad970.github.io/profile-website_Ahmad/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card Meta Tags -->
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ahmad Hamad - Cybersecurity Expert & Ethical Hacker" />
   <meta name="twitter:description" content="Passionate about cybersecurity, Ahmad specializes in penetration testing, vulnerability analysis, and cyber threat defense." />
   <meta name="twitter:image" content="https://ahmadhamad970.github.io/profile-website_Ahmad/assets/images/profile1.jpg" />
 
-  
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -39,12 +39,18 @@
   }
   </script>
 
- 
+
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/png" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
 
   <title>Ahmad Hamad | Cybersecurity Specialist & Ethical Hacker</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
+
+  <!-- Meta theme color for dark cybersecurity theme -->
+  <meta name="theme-color" content="#050505">
+  <meta name="msapplication-navbutton-color" content="#050505">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 
 <body>
@@ -132,12 +138,7 @@ Additionally, I help with solving cyber threat issues and resolving social media
               </div>
             </div>
           </div>
-          <div class="scroll-icon-box">
-            <a href="#about" class="scroll-btn">
-                <i class="uil uil-mouse-alt"></i>
-                <p>Scroll Down</p>
-            </a>
-          </div>
+
        </section>
 
        <section class="section" id="about">
@@ -333,8 +334,12 @@ In addition, Ahmed helps with cyber threat issues and resolving social media sec
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/background.js"></script>
+    <script src="./assets/js/particles-config.js"></script>
 </body>
 </html>
+
+
 
 
 
